<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <SeekBarPreference
    android:key="@string/maximum_wager_key"
    android:title="@string/maximum_wager_title"
    android:summary="@string/maximum_wager_summary"
    android:icon="@drawable/ic_dollar"
    app:min="@integer/maximum_wager_min"
    android:max="@integer/maximum_wager_max"
    android:defaultValue="@integer/maximum_wager_default"
    app:seekBarIncrement="@integer/maximum_wager_increment"
    app:showSeekBarValue="true"/>

  <SeekBarPreference
    android:key="@string/starting_pot_key"
    android:title="@string/starting_pot_title"
    android:summary="@string/starting_pot_summary"
    android:icon="@drawable/ic_starting_pot"
    app:min="@integer/starting_pot_min"
    android:max="@integer/starting_pot_max"
    app:seekBarIncrement="@integer/starting_pot_increment"
    android:defaultValue="@integer/starting_pot_default"
    app:showSeekBarValue="true"/>

  <SwitchPreference
    android:key="@string/wager_riding_key"
    android:title="@string/wager_riding_title"
    android:summary="@string/wager_riding_summary"
    android:icon="@drawable/ic_let_it_ride"
    android:defaultValue="@bool/wager_riding_default"/>

</PreferenceScreen>