<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  app:startDestination="@+id/navigation_play">

  <fragment
    android:id="@+id/navigation_play"
    android:label="@string/long_title_play"
    android:name="edu.cnm.deepdive.roulette.controller.PlayFragment"
    tools:layout="@layout/fragment_play">
    <action
      android:id="@+id/action_navigation_play_to_navigation_wager"
      app:destination="@id/navigation_wager"
      app:popUpTo="@id/navigation_play"/>
  </fragment>

  <fragment
    android:id="@+id/navigation_history"
    android:label="@string/long_title_history"
    android:name="edu.cnm.deepdive.roulette.controller.HistoryFragment"
    tools:layout="@layout/fragment_history"/>

  <fragment
    android:id="@+id/navigation_statistics"
    android:label="@string/long_title_stats"
    android:name="edu.cnm.deepdive.roulette.controller.StatisticsFragment"
    tools:layout="@layout/fragment_statistics"/>

  <fragment
    android:id="@+id/navigation_wager"
    android:name="edu.cnm.deepdive.roulette.controller.WagerFragment"
    android:label="@string/long_title_wager"
    tools:layout="@layout/fragment_wager"/>

  <fragment
    android:id="@+id/navigation_settings"
    android:name="edu.cnm.deepdive.roulette.controller.SettingsFragment"
    android:label="@string/long_title_settings"
    tools:layout="@xml/preferences"/>

</navigation>